@@ -210,6 +210,8 @@ VP 10.0.0 Changelog
 
 - rubber object improved to let it rotate around the X/Y/Z axis and show them in the editor if the checkbox "Show In Editor" is checked.
 
+- It is possible to export the entire table to an .obj file. (Menu File -> Export -> OBJ Mesh)
+
 VP 9.9.1 Changelog
 ------------------------
 - fixed some memory leaks
